--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 	{% for entry in entries%}
-	<h3>{{entry.title}}</h3>
+	<h3><a href="/post/{{entry.title}}">{{entry.title}}</a></h3>
 	<p>{{entry.content}}</p>
+	
 	<p>{{'='*100}}</p>
 	{% endfor %}
 {% endblock %}
