Layout changes + can delete posts

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,13 @@
         <title>Blog</title>
     </head>
     <body>
+    	<h1 align="center">Welcome To My Blog</h1>
+    	<hr>
+    	<p align="center">
+    		<a href="/">Home</a>
+    		<a href="/add">Add</a>
+    	</p>
+    	<hr>
         {% block content %}{% endblock %}
     </body>
 </html>
