--- a/templates/add.html
+++ b/templates/add.html
@@ -1,11 +1,17 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1>Add Entry</h1>
 
+
+<div class="container">
+<h3>Add Entry</h3>
 <form action={{ url_for('save')}} method="POST">
-	<input type="text" name="title">
-	<input type="text" name="post">
-	<input type="submit">
+	<div class="form-group">
+		<input class="form-control form-control-lg mb-2" type="text" placeholder="Title" name="title">
+		<!-- <input type="text" name="post"> -->
+		<textarea name="post" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+		<input type="submit">
+	</div>
 </form>
+</div>
 {% endblock %}
