--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,14 @@
 {% extends "layout.html" %}
 
 {% block content %}
-	{% for entry in entries%}
-	<h3><a href="/post/{{entry.title}}">{{entry.title}}</a></h3>
-	
-	<p>{{entry.content}}</p>
-	
-	<p>{{'='*100}}</p>
-	{% endfor %}
+	<div class="container ">
+		<div class="row m-4">
+			{% for entry in entries%}
+				<div class="col-md-6 p-2">
+					<h2><a href="/post/{{entry.title}}">{{entry.title}}</a></h2>
+					<p>{{entry.content[0:300]+"..."}}</p>
+				</div>
+			{% endfor %}
+		</div>
+	</div>
 {% endblock %}
