--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Blog</title>
-    </head>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <title>Blog</title>
+  </head>
+
     <body>
-    	<h1 align="center">Welcome To My Blog</h1>
-    	<hr>
-    	<p align="center">
-    		<a href="/">Home</a>
-    		<a href="/add">Add</a>
-    	</p>
-    	<hr>
+    <div class="p-3 m-2 text-center">
+      <h1>Toy Blog</h1>
+    </div>
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/add">Add</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+      </li>
+    </ul>
         {% block content %}{% endblock %}
     </body>
 </html>
